# fah-operator

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  claude-code-review.yml  images.yml
deploy/: crd.yaml  example-foldingathome.yaml  operator.yaml  rbac.yaml
docker/fah-client/: Dockerfile  entrypoint.sh  fold.pl
docker/operator/: Dockerfile
example/: example-foldingathome.yaml
src/: controller.rs  crd.rs  error.rs  leader.rs  lib.rs  main.rs  resources.rs
