[package]
name = "fah-operator"
version = "0.1.0"
edition = "2024"
description = "A Kubernetes operator that runs a Folding@Home client as a DaemonSet on every node."
license = "MIT"
repository = "https://github.com/ewohltman/fah-operator"

[[bin]]
name = "fah-operator"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[lib]
name = "fah_operator"
path = "src/lib.rs"

[dependencies]
kube = { version = "4", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.28", features = ["latest", "schemars"] }
kube-leader-election = "0.44"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Optimize the release binary that ships in the operator image: thin LTO and a
# single codegen unit for cross-crate inlining, aborting panics (no unwinding
# tables; leader election + Kubernetes restarts already treat process death as
# recoverable, so fail-fast beats limping on), and stripped symbols for size.
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
